metadata/force-app/main/default/objects/CustomName_nShYQ__c/CustomName_nShYQ__c.object-meta.xml
<CustomObject>
    <description>Description_DYduZ</description>
    <label>CustomLabel_ZKzVK</label>
    <nameField>
        <label>CustomLabel_ZKzVK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZKzVKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>