metadata/force-app/main/default/objects/CustomName_nShYQ__c/fields/CustomField_kdBmd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kdBmd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEKWIr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>