metadata/force-app/main/default/objects/CustomName_nShYQ__c/fields/CustomField_nTOqd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_nTOqd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEFkcT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>