metadata/force-app/main/default/objects/CustomName_nShYQ__c/fields/CustomField_tdplQ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_tdplQ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEbNux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>